--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ services:
         ports:
             - 3333:3333
         volumes:
-            - .:/usr/app
+            - ./:/usr/app
+            - /usr/app/node_modules
         links:
             - database
         depends_on: 
