--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+      "build":"babel src --extensions \".js, .ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev --inspect -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --poll src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register node_modules/typeorm/cli",
     "test": "jest --runInBand --detectOpenHandles",
@@ -11,29 +12,41 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1013.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "csv-parse": "^4.15.4",
     "dayjs": "^1.10.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^26.5.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
-    "ts-jest": "^26.5.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
@@ -41,6 +54,8 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
