--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-      "build":"babel src --extensions \".js, .ts\" --out-dir dist --copy-files",
+    "build": "babel src --extensions \".js, .ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev --inspect -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --poll src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register node_modules/typeorm/cli",
     "test": "jest --runInBand --detectOpenHandles",
@@ -12,9 +12,12 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.13.3",
+    "@sentry/tracing": "^6.13.3",
     "aws-sdk": "^2.1013.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
@@ -26,6 +29,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
+    "rate-limiter-flexible": "^2.3.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
@@ -43,12 +48,14 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.4",
+    "@types/redis": "^2.8.32",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
